--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -11,4 +11,5 @@
     <strong>{{ boldmessage }}</strong><br />
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /><br />
     <img src="/media/cat.jpg" alt="Picture of a Cat." />
+    <p>Visits: {{ visits }}</p>
 {% endblock %}
